src/objects/cb5__CBFunction__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>A{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cb5__NFL1__c</fullName>
        <label>NFL1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__NFL2__c</fullName>
        <label>NFL2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__NFL3__c</fullName>
        <label>NFL3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__NFLFormula__c</fullName>
        <label>NFL Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Title__c</fullName>
        <label>Title</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Type__c</fullName>
        <defaultValue>&apos;Variable&apos;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                    <default>true</default>
                    <label>Variable</label>
                </value>
                <value>
                    <fullName>NFL</fullName>
                </value>
                <value>
                    <fullName>BLM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CB Function</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <columns>NAME</columns>
        <columns>cb5__Title__c</columns>
        <columns>cb5__CBDivision__c</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <columns>cb5__CBVariable2__c</columns>
        <columns>cb5__CBVariable3__c</columns>
        <columns>cb5__CBVariable4__c</columns>
        <columns>cb5__CBOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cb5__BLM</fullName>
        <columns>NAME</columns>
        <columns>cb5__Title__c</columns>
        <columns>cb5__CBDivision__c</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <columns>cb5__CBVariable2__c</columns>
        <columns>cb5__CBVariable3__c</columns>
        <columns>cb5__CBVariable4__c</columns>
        <columns>cb5__CBOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cb5__Type__c</field>
            <operation>equals</operation>
            <value>BLM</value>
        </filters>
        <label>BLM</label>
    </listViews>
    <listViews>
        <fullName>cb5__NFL</fullName>
        <columns>NAME</columns>
        <columns>cb5__Title__c</columns>
        <columns>cb5__CBDivision__c</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <columns>cb5__CBVariable2__c</columns>
        <columns>cb5__CBVariable3__c</columns>
        <columns>cb5__CBVariable4__c</columns>
        <columns>cb5__CBOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cb5__Type__c</field>
            <operation>equals</operation>
            <value>NFL</value>
        </filters>
        <label>NFL</label>
    </listViews>
    <listViews>
        <fullName>cb5__Variable</fullName>
        <columns>NAME</columns>
        <columns>cb5__Title__c</columns>
        <columns>cb5__CBDivision__c</columns>
        <columns>cb5__CBAccount__c</columns>
        <columns>cb5__CBVariable1__c</columns>
        <columns>cb5__CBVariable2__c</columns>
        <columns>cb5__CBVariable3__c</columns>
        <columns>cb5__CBVariable4__c</columns>
        <columns>cb5__CBOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cb5__Type__c</field>
            <operation>equals</operation>
            <value>Variable</value>
        </filters>
        <label>Variable</label>
    </listViews>
    <nameField>
        <label>CB Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>